@@ -3,9 +3,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"     
         xmlns:local="clr-namespace:_3DTools;assembly=3DTools"    
-        Title="Model Preview" 
-        Height="640" 
-        Width="480"
+        Title="Model Viewer" 
+        Height="600" 
+        Width="800"
 >
 
     <Grid>
