@@ -1,3 +1,5 @@
+2010-12-06:
+	*ModelViewer: MODL/MLOD 3d preview
 2010-12-02:
 RigEditor:
 	*simplified interface by removing several values ignored by game
